--- a/index.html
+++ b/index.html
@@ -1,149 +1,130 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Gutter Replacement, Cleaning & Clearing – Askern DN6 | Home Repairs 4U</title>
 <link rel="canonical" href="https://steely1968.github.io/">
 <meta name="description" content="Professional gutter replacement, gutter cleaning and gutter clearing in Askern DN6 and all surrounding villages within a 10-mile radius. Fast, reliable, affordable and fully insured. Call 07735 873694.">
-<style>
-body {
-font-family: Arial, sans-serif;
-margin:0;
-padding:0;
-background:#f9f9f9;
-color:#222;
-line-height:1.6;
-}
-header {
-background:#ffffff;
-text-align:center;
-padding:25px 10px;
-border-bottom:4px solid #27ae60;
-}
-.logo {
-max-height:90px;
-width:auto;
-}
-.call-btn {
-display:inline-block;
-margin-top:18px;
-padding:14px 28px;
-background:#27ae60;
-color:#fff;
-font-size:19px;
-font-weight:bold;
-text-decoration:none;
-border-radius:6px;
-}
-main {
-max-width:900px;
-margin:0 auto;
-padding:25px 15px;
-background:#fff;
-}
-footer {
-background:#333;
-color:#fff;
-text-align:center;
-padding:22px 15px;
-margin-top:40px;
-font-size:14px;
-}
-h1, h2, h3 {
-color:#222;
-}
-</style>
-</head>
-<body>
+<link rel="preload" as="image" href="images/logo.webp">
+<meta http-equiv="Cache-Control" content="max-age=604800, public">
 
-<!-- HEADER -->
+<style>
+body{font-family:Arial,sans-serif;margin:0;padding:0;background:#f9f9f9;color:#222;line-height:1.6}
+header{text-align:center;padding:25px 10px;background:#fff;border-bottom:4px solid #27ae60}
+.logo{max-height:90px;width:auto}
+.call-btn{display:inline-block;margin-top:18px;padding:14px 28px;background:#27ae60;color:#fff;font-size:19px;font-weight:bold;text-decoration:none;border-radius:6px}
+main{max-width:900px;margin:0 auto;padding:25px 15px;background:#fff}
+footer{background:#333;color:#fff;text-align:center;padding:22px 15px;margin-top:40px;font-size:14px}
+h1,h2,h3{color:#222}
+</style>
+
+<!-- LOCALBUSINESS SCHEMA -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"HomeAndConstructionBusiness",
+"name":"Home Repairs 4U",
+"image":"https://steely1968.github.io/images/logo.webp",
+"url":"https://steely1968.github.io/",
+"@id":"https://steely1968.github.io/#business",
+"description":"Professional gutter replacement, gutter cleaning and gutter clearing in Askern DN6 and all surrounding villages within a 10-mile radius.",
+"telephone":"+447735873694",
+"areaServed":{
+"@type":"GeoCircle",
+"geoMidpoint":{"@type":"GeoCoordinates","latitude":53.616,"longitude":-1.152},
+"geoRadius":16093
+},
+"address":{
+"@type":"PostalAddress",
+"addressLocality":"Askern",
+"postalCode":"DN6",
+"addressRegion":"South Yorkshire",
+"addressCountry":"GB"
+},
+"serviceType":[
+"Gutter replacement",
+"Gutter cleaning",
+"Gutter clearing",
+"Roofline repairs",
+"Downpipe repairs"
+],
+"logo":"https://steely1968.github.io/images/logo.webp",
+"openingHoursSpecification":[{
+"@type":"OpeningHoursSpecification",
+"dayOfWeek":[
+"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
+],
+"opens":"07:00","closes":"20:00"
+}],
+"sameAs":["https://conaclehometepairs4u.com"]
+}
+</script>
+
+<!-- FAQ SCHEMA -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"FAQPage",
+"mainEntity":[
+{"@type":"Question","name":"How often should gutters be cleaned?","acceptedAnswer":{"@type":"Answer","text":"At least twice per year, or more often if trees are nearby or water is overflowing."}},
+{"@type":"Question","name":"Do you work outside Askern?","acceptedAnswer":{"@type":"Answer","text":"Yes, we cover every village, town and rural area within 10 miles of Askern DN6."}},
+{"@type":"Question","name":"Can blocked gutters cause damage?","acceptedAnswer":{"@type":"Answer","text":"Yes, overflowing gutters cause damp, rot, mould and brickwork damage if left untreated."}},
+{"@type":"Question","name":"Do you replace broken guttering?","acceptedAnswer":{"@type":"Answer","text":"Yes, we supply and install high-quality UPVC gutters, downpipes, brackets and joints."}}
+]}
+</script>
+
+</head><body>
+
 <header>
 <img src="images/logo.webp" alt="Home Repairs 4U – Gutter Services in Askern DN6" class="logo">
 <br>
 <a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
 </header>
 
-<!-- MAIN CONTENT -->
 <main>
 <h1>Gutter Replacement, Gutter Cleaning & Gutter Clearing in Askern DN6</h1>
+<p>Welcome to Home Repairs 4U — your trusted and reliable choice for <strong>professional gutter services in Askern DN6</strong> and every village, town and rural area within a <strong>10-mile radius of Askern</strong>. With decades of hands-on experience, we specialise in <strong>gutter replacement, gutter cleaning, gutter clearing, roofline repairs and exterior home maintenance</strong>. Blocked or damaged gutters quickly lead to damp, rot, mould, fascia damage and water staining — so choosing a reliable local expert matters.</p>
 
-<p>
-Welcome to Home Repairs 4U — your trusted and reliable choice for <strong>professional gutter services in Askern DN6</strong> and every village, town and rural area within a <strong>10-mile radius of Askern</strong>. With decades of real hands-on experience, we specialise in <strong>gutter replacement, gutter cleaning, gutter clearing, minor roofline repairs and exterior home maintenance</strong>.
-</p>
-
-<p>
-Blocked or damaged gutters might seem like a small issue, but when left untreated they quickly lead to bigger problems including damp, rot, mould growth, and water damage to walls, fascias and brickwork. That’s why choosing a trusted local service makes such a difference. At Home Repairs 4U, we provide a fast, affordable and honest approach that homeowners across the area rely on. No call-out fees, no unnecessary upselling and no hidden costs — just straightforward work done properly.
-</p>
-
-<h2>Why Gutters Need Regular Cleaning & Clearing</h2>
-<p>
-Your gutters play a vital role in protecting your home from weather damage. Over time, leaves, moss, debris, birds’ nests and general build-up reduce water flow, eventually causing blockages and overflow. This leads to external damp, dripping, staining, foundation problems and leaks that can be expensive to fix if ignored. Regular cleaning prevents this and keeps your home structurally sound.
-</p>
+<h2>Why Gutters Need Regular Cleaning</h2>
+<p>Gutters collect leaves, moss and debris over time. When this builds up, rainwater has nowhere to go and starts overflowing down walls, causing cracking, damp penetration, mould growth and timber rot. Regular gutter maintenance prevents costly repairs and protects your home all year round.</p>
 
 <h2>Our Gutter Services</h2>
 
 <h3>✔ Gutter Cleaning</h3>
-<p>
-We deliver thorough gutter cleaning using safe ladder techniques and manual clearing to ensure your gutters are free-flowing. We remove moss, leaves, dirt, silt and all debris from gutters, downpipes and hoppers. If water isn’t draining properly, we diagnose the cause and clear the obstruction. You’ll receive honest advice so you always know the condition of your guttering.
-</p>
+<p>We remove all leaves, moss, silt and debris from gutters, hoppers and downpipes using safe ladder techniques. Water-flow is checked before completion to ensure proper drainage.</p>
 
 <h3>✔ Gutter Clearing</h3>
-<p>
-Clearing is essential when build-up reaches the point of blockage. Overflowing gutters cause damage fast, especially in older homes around Askern and the surrounding villages. We clear every inch and test the flow before finishing, ensuring rainwater drains exactly as it should.
-</p>
+<p>For heavy blockages and overflows, we fully clear your system and restore correct water flow. This is essential for older properties around Askern, Skellow and Campsall.</p>
 
 <h3>✔ Gutter Replacement & Repairs</h3>
-<p>
-If your gutters are cracked, sagging, leaking, poorly installed or simply too old, replacement may be the safest and most cost-effective option. We supply and fit new UPVC guttering, brackets, clips, connectors, downpipes and joints in a range of modern colours. Whether it’s a small section or a full system replacement, we ensure a neat, secure fit and long-lasting performance.
-</p>
+<p>We replace cracked, sagging or leaking gutters with modern UPVC systems. Whether it’s one section or a full system replacement, we ensure neat installation and long-lasting performance.</p>
 
-<h2>Areas We Cover – All Within 10 Miles of Askern DN6</h2>
-<p>
-Our service radius includes every village, hamlet and town around Askern DN6 — up to 10 miles in any direction. This includes but is not limited to:
-<strong>Askern, Norton, Campsall, Skellow, Carcroft, Bentley, Adwick-le-Street, Burghwallis, Owston, Sutton, Moss, Fenwick, Sykehouse, Braithwaite, Thorpe-in-Balne, Arksey, Hampole, Woodlands, Brodsworth, Hickleton, Goldthorpe, Thurnscoe, Sprotbrough, Adwick, and all surrounding rural areas.</strong>
-</p>
+<h2>Areas We Cover – 10-Mile Radius of Askern DN6</h2>
+<p>We cover <strong>every location within 10 miles of Askern DN6</strong>: Askern, Norton, Campsall, Skellow, Carcroft, Bentley, Adwick-le-Street, Burghwallis, Owston, Sutton, Moss, Fenwick, Sykehouse, Braithwaite, Thorpe-in-Balne, Arksey, Woodlands, Brodsworth, Hickleton, Goldthorpe, Thurnscoe, Sprotbrough and every rural area in between.</p>
 
-<p>
-If you’re unsure whether your property is inside our 10-mile zone, just give us a call — chances are, we cover it.
-</p>
-
-<h2>Why Choose Us?</h2>
-<p>
-Here’s what makes Home Repairs 4U one of the most trusted names for gutter work in the Askern region:
-</p>
-
+<h2>Why Home Repairs 4U?</h2>
 <ul>
-<li>✔ Over 30 years hands-on experience</li>
-<li>✔ Affordable and competitive pricing</li>
-<li>✔ Fully insured and reliable</li>
-<li>✔ Friendly, local and honest service</li>
-<li>✔ No call-out charges</li>
-<li>✔ Quick response times</li>
-<li>✔ Clean workmanship and respect for your property</li>
+<li>✔ 30+ years experience</li>
+<li>✔ Affordable, competitive pricing</li>
+<li>✔ Friendly, reliable, fully insured</li>
+<li>✔ No call-out fees</li>
+<li>✔ Fast response times</li>
+<li>✔ Clean workmanship</li>
 </ul>
 
-<h2>Long-Form Detail for SEO (No Content Reduced)</h2>
-<p>
-A full, high-quality guttering system protects your property year-round. Whether it's sudden heavy rainfall or slow winter drips, the gutters on your home guide water safely away from walls, foundations and landscaping. A neglected gutter system eventually leads to much bigger issues — damp penetration, mould growth, brickwork damage, rot in timber fascias and expensive structural repairs. Many problems begin with something as simple as a blocked downpipe or a cracked joint. That's why routine maintenance is essential, especially in older properties common around Askern, Skellow, Campsall and the surrounding areas. We pride ourselves on offering a dependable, no-nonsense approach where every job is completed with proper attention to detail. Our thorough inspections allow us to spot early warning signs before they grow into major problems, and we always explain our findings clearly so you understand what needs doing and why. Customer satisfaction is at the heart of everything we do, and we treat every home as if it were our own.
-</p>
+<h2>Detailed Long-Form Content (SEO Boost)</h2>
+<p>A properly maintained guttering system protects your home from water-related damage all year. Older homes around Askern and surrounding villages often face recurring issues with moss growth, blocked downpipes and failing seals. We take a thorough inspection-first approach to identify these early. Preventing water penetration is significantly cheaper than repairing structural damp later. Our service is transparent, honest and designed for long-term protection. Customers across DN6 trust us for our reliability, workmanship and straightforward pricing.</p>
 
-<h2>Ready to Book? Call Anytime</h2>
-<p>
-For fast, friendly gutter replacement, cleaning or clearing in Askern DN6 and the full 10-mile radius, contact us today. We’re always happy to help and can often attend the same day depending on location and workload.
-</p>
+<h2>Contact Us</h2>
+<p>For fast, friendly gutter replacement, cleaning or clearing, call anytime. Same-day availability is often possible.</p>
 
-<div style="text-align:center; margin:35px 0;">
+<div style="text-align:center;margin:35px 0;">
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </div>
 
 </main>
 
-<!-- FOOTER -->
 <footer>
-© Home Repairs 4U – Gutter Replacement, Cleaning & Clearing – Askern DN6
-<br>Call: 07735 873694
+© Home Repairs 4U – Gutter Replacement, Cleaning & Clearing – Askern DN6 • Call 07735 873694
 </footer>
 
-</body>
-</html>
+</body></html>
