--- a/index.html
+++ b/index.html
@@ -1,61 +1,65 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Gutter Replacement, Cleaning & Clearing – Askern DN6 | Home Repairs 4U</title>
+
 <link rel="canonical" href="https://steely1968.github.io/">
-<meta name="description" content="Professional gutter replacement, gutter cleaning and gutter clearing in Askern DN6 and all surrounding villages within a 10-mile radius. Fast, reliable, affordable and fully insured. Call 07735 873694.">
+<meta name="description" content="Expert gutter replacement, gutter cleaning and gutter clearing in Askern DN6 and every village within a 10-mile radius. Fast, reliable, affordable and fully insured. Call 07735 873694.">
+
+<!-- Efficient cache for static assets -->
+<meta http-equiv="Cache-Control" content="max-age=31536000, immutable">
+
+<!-- Preload logo for faster rendering -->
 <link rel="preload" as="image" href="images/logo.webp">
-<meta http-equiv="Cache-Control" content="max-age=604800, public">
 
 <style>
-body{font-family:Arial,sans-serif;margin:0;padding:0;background:#f9f9f9;color:#222;line-height:1.6}
+body{font-family:Arial, sans-serif;margin:0;padding:0;background:#f9f9f9;color:#222;line-height:1.65}
 header{text-align:center;padding:25px 10px;background:#fff;border-bottom:4px solid #27ae60}
 .logo{max-height:90px;width:auto}
 .call-btn{display:inline-block;margin-top:18px;padding:14px 28px;background:#27ae60;color:#fff;font-size:19px;font-weight:bold;text-decoration:none;border-radius:6px}
 main{max-width:900px;margin:0 auto;padding:25px 15px;background:#fff}
-footer{background:#333;color:#fff;text-align:center;padding:22px 15px;margin-top:40px;font-size:14px}
-h1,h2,h3{color:#222}
+h1,h2,h3{color:#111}
+footer{background:#111;color:#fff;text-align:center;padding:25px 15px;margin-top:40px;font-size:14px}
 </style>
 
 <!-- LOCALBUSINESS SCHEMA -->
 <script type="application/ld+json">
 {
-"@context":"https://schema.org",
-"@type":"HomeAndConstructionBusiness",
-"name":"Home Repairs 4U",
-"image":"https://steely1968.github.io/images/logo.webp",
-"url":"https://steely1968.github.io/",
-"@id":"https://steely1968.github.io/#business",
-"description":"Professional gutter replacement, gutter cleaning and gutter clearing in Askern DN6 and all surrounding villages within a 10-mile radius.",
-"telephone":"+447735873694",
-"areaServed":{
-"@type":"GeoCircle",
-"geoMidpoint":{"@type":"GeoCoordinates","latitude":53.616,"longitude":-1.152},
-"geoRadius":16093
+"@context": "https://schema.org",
+"@type": "HomeAndConstructionBusiness",
+"name": "Home Repairs 4U",
+"image": "https://steely1968.github.io/images/logo.webp",
+"url": "https://steely1968.github.io/",
+"@id": "https://steely1968.github.io/#business",
+"description": "Professional gutter replacement, gutter cleaning and gutter clearing in Askern DN6 and all surrounding locations within 10 miles.",
+"telephone": "+447735873694",
+"areaServed": {
+"@type": "GeoCircle",
+"geoMidpoint": { "@type": "GeoCoordinates", "latitude": 53.616, "longitude": -1.152 },
+"geoRadius": 16093
 },
-"address":{
-"@type":"PostalAddress",
-"addressLocality":"Askern",
-"postalCode":"DN6",
-"addressRegion":"South Yorkshire",
-"addressCountry":"GB"
+"address": {
+"@type": "PostalAddress",
+"addressLocality": "Askern",
+"postalCode": "DN6",
+"addressRegion": "South Yorkshire",
+"addressCountry": "GB"
 },
-"serviceType":[
+"openingHoursSpecification": [{
+"@type":"OpeningHoursSpecification",
+"dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
+"opens": "07:00",
+"closes": "20:00"
+}],
+"serviceType": [
 "Gutter replacement",
 "Gutter cleaning",
 "Gutter clearing",
 "Roofline repairs",
 "Downpipe repairs"
-],
-"logo":"https://steely1968.github.io/images/logo.webp",
-"openingHoursSpecification":[{
-"@type":"OpeningHoursSpecification",
-"dayOfWeek":[
-"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
-],
-"opens":"07:00","closes":"20:00"
-}],
-"sameAs":["https://conaclehometepairs4u.com"]
+]
 }
 </script>
 
@@ -65,57 +69,108 @@ h1,h2,h3{color:#222}
 "@context":"https://schema.org",
 "@type":"FAQPage",
 "mainEntity":[
-{"@type":"Question","name":"How often should gutters be cleaned?","acceptedAnswer":{"@type":"Answer","text":"At least twice per year, or more often if trees are nearby or water is overflowing."}},
-{"@type":"Question","name":"Do you work outside Askern?","acceptedAnswer":{"@type":"Answer","text":"Yes, we cover every village, town and rural area within 10 miles of Askern DN6."}},
-{"@type":"Question","name":"Can blocked gutters cause damage?","acceptedAnswer":{"@type":"Answer","text":"Yes, overflowing gutters cause damp, rot, mould and brickwork damage if left untreated."}},
-{"@type":"Question","name":"Do you replace broken guttering?","acceptedAnswer":{"@type":"Answer","text":"Yes, we supply and install high-quality UPVC gutters, downpipes, brackets and joints."}}
+{
+"@type":"Question",
+"name":"How often should gutters be cleaned?",
+"acceptedAnswer":{"@type":"Answer","text":"Twice a year is recommended, or more frequently if trees or moss are present."}
+},
+{
+"@type":"Question",
+"name":"Do you cover areas outside Askern?",
+"acceptedAnswer":{"@type":"Answer","text":"Yes — every location within a 10-mile radius of Askern DN6."}
+},
+{
+"@type":"Question",
+"name":"Can blocked gutters cause damage?",
+"acceptedAnswer":{"@type":"Answer","text":"Yes. Overflowing gutters lead to damp, mould, rot and structural issues if ignored."}
+},
+{
+"@type":"Question",
+"name":"Do you replace damaged guttering?",
+"acceptedAnswer":{"@type":"Answer","text":"Yes — we replace old, cracked and broken UPVC guttering and downpipes."}
+}
 ]}
 </script>
 
-</head><body>
+</head>
+<body>
 
 <header>
-<img src="images/logo.webp" alt="Home Repairs 4U – Gutter Services in Askern DN6" class="logo">
+<img src="images/logo.webp"
+alt="Home Repairs 4U – Gutter Services in Askern DN6"
+class="logo"
+width="600" height="200"
+style="max-height:90px;width:auto;">
 <br>
-<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+<a href="tel:07735873694"
+class="call-btn"
+aria-label="Call Home Repairs 4U on 07735 873694">
+📞 Call Now: 07735 873694
+</a>
 </header>
 
 <main>
 <h1>Gutter Replacement, Gutter Cleaning & Gutter Clearing in Askern DN6</h1>
-<p>Welcome to Home Repairs 4U — your trusted and reliable choice for <strong>professional gutter services in Askern DN6</strong> and every village, town and rural area within a <strong>10-mile radius of Askern</strong>. With decades of hands-on experience, we specialise in <strong>gutter replacement, gutter cleaning, gutter clearing, roofline repairs and exterior home maintenance</strong>. Blocked or damaged gutters quickly lead to damp, rot, mould, fascia damage and water staining — so choosing a reliable local expert matters.</p>
 
-<h2>Why Gutters Need Regular Cleaning</h2>
-<p>Gutters collect leaves, moss and debris over time. When this builds up, rainwater has nowhere to go and starts overflowing down walls, causing cracking, damp penetration, mould growth and timber rot. Regular gutter maintenance prevents costly repairs and protects your home all year round.</p>
+<p>
+Home Repairs 4U provides dependable, professional and high-quality <strong>gutter replacement, gutter cleaning and gutter clearing in Askern DN6</strong> and every surrounding village, town and rural area within a <strong>10-mile radius of Askern</strong>. With 30+ years of genuine hands-on trade experience, we offer reliable service, competitive prices and workmanship that lasts.
+</p>
 
-<h2>Our Gutter Services</h2>
+<p>
+Gutters are one of the most important parts of your home’s weather protection system. When they become blocked, cracked, sagging or overflowing, rainwater begins running down walls, into brickwork and behind fascias. This can quickly lead to mould, damp, rot, staining and expensive structural damage. Regular maintenance keeps your home safe, dry and protected all year round — and that’s exactly where we come in.
+</p>
+
+<h2>Our Core Gutter Services</h2>
 
 <h3>✔ Gutter Cleaning</h3>
-<p>We remove all leaves, moss, silt and debris from gutters, hoppers and downpipes using safe ladder techniques. Water-flow is checked before completion to ensure proper drainage.</p>
+<p>
+Our gutter cleaning service removes moss, leaves, silt, weeds and all blockages from gutters, hoppers and downpipes. We inspect your system, clear all debris, flush downpipes and ensure water flows freely. By keeping your gutters clean, you significantly reduce the risk of damp and long-term water damage.
+</p>
 
 <h3>✔ Gutter Clearing</h3>
-<p>For heavy blockages and overflows, we fully clear your system and restore correct water flow. This is essential for older properties around Askern, Skellow and Campsall.</p>
+<p>
+If your gutters are overflowing or visibly blocked, our clearing service restores full flow immediately. Older homes in Askern, Norton, Campsall, Skellow and surrounding villages are especially prone to heavy buildup. We clear everything safely and professionally, leaving your drainage system fully functional again.
+</p>
 
-<h3>✔ Gutter Replacement & Repairs</h3>
-<p>We replace cracked, sagging or leaking gutters with modern UPVC systems. Whether it’s one section or a full system replacement, we ensure neat installation and long-lasting performance.</p>
+<h3>✔ Gutter Replacement</h3>
+<p>
+If your guttering is leaking, sagging, cracked or badly fitted, replacement is often the most cost-effective solution. We install high-quality UPVC gutter systems, brackets, joints and downpipes designed to last for decades. Every installation is neat, secure and built to handle heavy rainfall.
+</p>
 
-<h2>Areas We Cover – 10-Mile Radius of Askern DN6</h2>
-<p>We cover <strong>every location within 10 miles of Askern DN6</strong>: Askern, Norton, Campsall, Skellow, Carcroft, Bentley, Adwick-le-Street, Burghwallis, Owston, Sutton, Moss, Fenwick, Sykehouse, Braithwaite, Thorpe-in-Balne, Arksey, Woodlands, Brodsworth, Hickleton, Goldthorpe, Thurnscoe, Sprotbrough and every rural area in between.</p>
+<h2>Areas We Cover – All Within 10 Miles of Askern DN6</h2>
+<p>
+We cover <strong>every area within 10 miles of Askern</strong>, including: Askern, Norton, Campsall, Skellow, Carcroft, Bentley, Adwick-le-Street, Burghwallis, Owston, Moss, Fenwick, Sykehouse, Braithwaite, Thorpe-in-Balne, Arksey, Woodlands, Hickleton, Brodsworth, Goldthorpe, Thurnscoe, Sprotbrough and all surrounding rural communities.
+</p>
+
+<p>
+If you're unsure whether you're covered — the answer is almost always yes.
+</p>
 
 <h2>Why Home Repairs 4U?</h2>
+
 <ul>
-<li>✔ 30+ years experience</li>
-<li>✔ Affordable, competitive pricing</li>
-<li>✔ Friendly, reliable, fully insured</li>
+<li>✔ Over 30 years real trade experience</li>
+<li>✔ Competitive prices and honest advice</li>
+<li>✔ Fully insured</li>
+<li>✔ Same-day or next-day availability</li>
 <li>✔ No call-out fees</li>
-<li>✔ Fast response times</li>
-<li>✔ Clean workmanship</li>
+<li>✔ Friendly, local, reliable</li>
+<li>✔ Clean and respectful workmanship</li>
 </ul>
 
-<h2>Detailed Long-Form Content (SEO Boost)</h2>
-<p>A properly maintained guttering system protects your home from water-related damage all year. Older homes around Askern and surrounding villages often face recurring issues with moss growth, blocked downpipes and failing seals. We take a thorough inspection-first approach to identify these early. Preventing water penetration is significantly cheaper than repairing structural damp later. Our service is transparent, honest and designed for long-term protection. Customers across DN6 trust us for our reliability, workmanship and straightforward pricing.</p>
+<h2>Long-Form Detail (SEO-Optimised)</h2>
+<p>
+Gutters protect your home from water damage by carrying rainwater safely away from your roof and walls. When they become blocked or damaged, moisture begins to enter places it shouldn't — especially in older brick-built homes found throughout Askern and its surrounding villages. Overflowing gutters can cause damp patches, mould growth, peeling paint, timber rot and problems with internal walls and ceilings. Many homeowners only notice the issue once damage is visible indoors, but by then repairs can be costly.
+</p>
 
-<h2>Contact Us</h2>
-<p>For fast, friendly gutter replacement, cleaning or clearing, call anytime. Same-day availability is often possible.</p>
+<p>
+Routine gutter maintenance is the simplest way to avoid this. Our approach focuses on prevention, early detection and long-lasting solutions. Every job includes a visual inspection, honest feedback and recommendations based solely on what you actually need — never unnecessary upsells. Homeowners across DN6 rely on our experience, integrity and commitment to doing the job right the first time.
+</p>
+
+<h2>Book Today</h2>
+<p>
+For fast, friendly and reliable gutter replacement, cleaning or clearing, call anytime. We respond quickly and cover all properties within 10 miles of Askern DN6.
+</p>
 
 <div style="text-align:center;margin:35px 0;">
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
@@ -127,4 +182,5 @@ h1,h2,h3{color:#222}
 © Home Repairs 4U – Gutter Replacement, Cleaning & Clearing – Askern DN6 • Call 07735 873694
 </footer>
 
-</body></html>
+</body>
+</html>
