--- a/index.html
+++ b/index.html
@@ -2,58 +2,115 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Gutter Replacement, Cleaning & Clearing – Askern DN6 | Home Repairs 4U</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Gutter Replacement, Cleaning & Clearing | Askern DN6 | Home Repairs 4U</title>
 
 <link rel="canonical" href="https://steely1968.github.io/">
-<meta name="description" content="Expert gutter replacement, gutter cleaning and gutter clearing in Askern DN6 and every village within a 10-mile radius. Fast, reliable, affordable and fully insured. Call 07735 873694.">
+<meta name="description" content="Home Repairs 4U provides gutter replacement, gutter cleaning and gutter clearing across Askern DN6 and all locations within 10 miles. Fast, affordable, fully insured. Call 07735 873694.">
 
-<!-- Efficient cache for static assets -->
+<!-- Cache optimisation -->
 <meta http-equiv="Cache-Control" content="max-age=31536000, immutable">
 
-<!-- Preload logo for faster rendering -->
+<!-- Preload logo -->
 <link rel="preload" as="image" href="images/logo.webp">
 
 <style>
-body{font-family:Arial, sans-serif;margin:0;padding:0;background:#f9f9f9;color:#222;line-height:1.65}
-header{text-align:center;padding:25px 10px;background:#fff;border-bottom:4px solid #27ae60}
-.logo{max-height:90px;width:auto}
-.call-btn{display:inline-block;margin-top:18px;padding:14px 28px;background:#27ae60;color:#fff;font-size:19px;font-weight:bold;text-decoration:none;border-radius:6px}
-main{max-width:900px;margin:0 auto;padding:25px 15px;background:#fff}
-h1,h2,h3{color:#111}
-footer{background:#111;color:#fff;text-align:center;padding:25px 15px;margin-top:40px;font-size:14px}
+/* GENERAL PAGE STYLES */
+body{
+margin:0;
+padding:0;
+font-family:Arial, sans-serif;
+background:#f9f9f9;
+color:#222;
+line-height:1.65;
+}
+
+/* HEADER */
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+
+/* LOGO (explicit width/height for CLS) */
+.logo{
+max-height:90px;
+width:auto;
+}
+
+/* CALL BUTTON – Highest Contrast (AAA) */
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.call-btn:hover{
+background:#333;
+color:#fff;
+}
+
+/* CONTENT */
+main{
+max-width:900px;
+margin:0 auto;
+background:#fff;
+padding:25px 15px;
+}
+
+h1,h2,h3{
+color:#111;
+}
+
+/* FOOTER – improved contrast */
+footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
 </style>
 
-<!-- LOCALBUSINESS SCHEMA -->
+<!-- LOCAL BUSINESS SCHEMA -->
 <script type="application/ld+json">
 {
-"@context": "https://schema.org",
-"@type": "HomeAndConstructionBusiness",
-"name": "Home Repairs 4U",
-"image": "https://steely1968.github.io/images/logo.webp",
-"url": "https://steely1968.github.io/",
-"@id": "https://steely1968.github.io/#business",
-"description": "Professional gutter replacement, gutter cleaning and gutter clearing in Askern DN6 and all surrounding locations within 10 miles.",
-"telephone": "+447735873694",
-"areaServed": {
-"@type": "GeoCircle",
-"geoMidpoint": { "@type": "GeoCoordinates", "latitude": 53.616, "longitude": -1.152 },
-"geoRadius": 16093
+"@context":"https://schema.org",
+"@type":"HomeAndConstructionBusiness",
+"name":"Home Repairs 4U",
+"image":"https://steely1968.github.io/images/logo.webp",
+"url":"https://steely1968.github.io/",
+"@id":"https://steely1968.github.io/#business",
+"description":"Gutter replacement, gutter cleaning and gutter clearing in Askern DN6 and all surrounding areas within 10 miles.",
+"telephone":"+447735873694",
+"address":{
+"@type":"PostalAddress",
+"addressLocality":"Askern",
+"postalCode":"DN6",
+"addressRegion":"South Yorkshire",
+"addressCountry":"GB"
 },
-"address": {
-"@type": "PostalAddress",
-"addressLocality": "Askern",
-"postalCode": "DN6",
-"addressRegion": "South Yorkshire",
-"addressCountry": "GB"
+"areaServed":{
+"@type":"GeoCircle",
+"geoMidpoint":{"@type":"GeoCoordinates","latitude":53.616,"longitude":-1.152},
+"geoRadius":16093
 },
-"openingHoursSpecification": [{
+"openingHoursSpecification":[{
 "@type":"OpeningHoursSpecification",
-"dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
-"opens": "07:00",
-"closes": "20:00"
+"dayOfWeek":[
+"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
+],
+"opens":"07:00","closes":"20:00"
 }],
-"serviceType": [
+"serviceType":[
 "Gutter replacement",
 "Gutter cleaning",
 "Gutter clearing",
@@ -71,105 +128,109 @@ footer{background:#111;color:#fff;text-align:center;padding:25px 15px;margin-top
 "mainEntity":[
 {
 "@type":"Question",
-"name":"How often should gutters be cleaned?",
-"acceptedAnswer":{"@type":"Answer","text":"Twice a year is recommended, or more frequently if trees or moss are present."}
+"name":"Do gutters really need regular cleaning?",
+"acceptedAnswer":{"@type":"Answer","text":"Yes. Cleaning twice a year prevents damp, mould, rot and water damage."}
 },
 {
 "@type":"Question",
-"name":"Do you cover areas outside Askern?",
-"acceptedAnswer":{"@type":"Answer","text":"Yes — every location within a 10-mile radius of Askern DN6."}
+"name":"How far do you travel from Askern DN6?",
+"acceptedAnswer":{"@type":"Answer","text":"We cover all areas within a 10-mile radius including Campsall, Norton, Skellow, Carcroft, Adwick and more."}
 },
 {
 "@type":"Question",
-"name":"Can blocked gutters cause damage?",
-"acceptedAnswer":{"@type":"Answer","text":"Yes. Overflowing gutters lead to damp, mould, rot and structural issues if ignored."}
+"name":"Do you repair and replace guttering?",
+"acceptedAnswer":{"@type":"Answer","text":"Yes. We replace cracked, sagging, leaking or outdated UPVC guttering with long-lasting modern systems."}
 },
 {
 "@type":"Question",
-"name":"Do you replace damaged guttering?",
-"acceptedAnswer":{"@type":"Answer","text":"Yes — we replace old, cracked and broken UPVC guttering and downpipes."}
+"name":"Are same-day bookings available?",
+"acceptedAnswer":{"@type":"Answer","text":"Yes. We aim to offer same-day or next-day service whenever possible."}
 }
 ]}
 </script>
 
 </head>
+
 <body>
 
 <header>
 <img src="images/logo.webp"
-alt="Home Repairs 4U – Gutter Services in Askern DN6"
+alt="Home Repairs 4U Logo"
 class="logo"
 width="600" height="200"
 style="max-height:90px;width:auto;">
 <br>
-<a href="tel:07735873694"
-class="call-btn"
-aria-label="Call Home Repairs 4U on 07735 873694">
-📞 Call Now: 07735 873694
-</a>
+<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </header>
 
 <main>
-<h1>Gutter Replacement, Gutter Cleaning & Gutter Clearing in Askern DN6</h1>
+
+<h1>Gutter Replacement, Cleaning & Clearing in Askern DN6</h1>
 
 <p>
-Home Repairs 4U provides dependable, professional and high-quality <strong>gutter replacement, gutter cleaning and gutter clearing in Askern DN6</strong> and every surrounding village, town and rural area within a <strong>10-mile radius of Askern</strong>. With 30+ years of genuine hands-on trade experience, we offer reliable service, competitive prices and workmanship that lasts.
+Welcome to <strong>Home Repairs 4U</strong>, your trusted local specialist for <strong>gutter replacement</strong>, <strong>gutter cleaning</strong> and <strong>gutter clearing</strong> throughout <strong>Askern DN6</strong> and every surrounding village and town within a <strong>10-mile radius</strong>. With over 30 years of real trade experience, we provide reliable service, clear communication, fair prices and long-lasting workmanship. No call-out fees, no hidden charges — just genuine professional service.
 </p>
 
 <p>
-Gutters are one of the most important parts of your home’s weather protection system. When they become blocked, cracked, sagging or overflowing, rainwater begins running down walls, into brickwork and behind fascias. This can quickly lead to mould, damp, rot, staining and expensive structural damage. Regular maintenance keeps your home safe, dry and protected all year round — and that’s exactly where we come in.
+Guttering is one of the most important and overlooked parts of any property. When it becomes blocked, cracked or loose, rainwater begins to overflow in all the wrong places. This leads to damp, mould, staining, timber rot, internal leaks and structural issues. The good news: almost all gutter-related problems are preventable with proper maintenance and timely repairs.
 </p>
 
-<h2>Our Core Gutter Services</h2>
+<h2>Our Professional Gutter Services</h2>
 
 <h3>✔ Gutter Cleaning</h3>
 <p>
-Our gutter cleaning service removes moss, leaves, silt, weeds and all blockages from gutters, hoppers and downpipes. We inspect your system, clear all debris, flush downpipes and ensure water flows freely. By keeping your gutters clean, you significantly reduce the risk of damp and long-term water damage.
+Our thorough cleaning service removes moss, leaves, weeds, silt, roof debris and anything else that causes gutters to overflow. We also flush and check your downpipes. Clean gutters protect your home from expensive long-term water damage — especially important for older homes around Askern, Norton and Campsall.
 </p>
 
-<h3>✔ Gutter Clearing</h3>
+<h3>✔ Gutter Clearing (Blocked Gutters)</h3>
 <p>
-If your gutters are overflowing or visibly blocked, our clearing service restores full flow immediately. Older homes in Askern, Norton, Campsall, Skellow and surrounding villages are especially prone to heavy buildup. We clear everything safely and professionally, leaving your drainage system fully functional again.
+If your gutters are overflowing or visibly blocked, our clearing service restores full water flow fast. Blocked gutters are extremely common across DN6 due to trees, storms, moss and general debris. We quickly remove all blockages and ensure your drainage system works exactly as it should.
 </p>
 
 <h3>✔ Gutter Replacement</h3>
 <p>
-If your guttering is leaking, sagging, cracked or badly fitted, replacement is often the most cost-effective solution. We install high-quality UPVC gutter systems, brackets, joints and downpipes designed to last for decades. Every installation is neat, secure and built to handle heavy rainfall.
+When guttering becomes cracked, warped, brittle or poorly fitted, replacement is often the safest and most cost-efficient option. We supply and fit modern UPVC systems designed for durability, strength and long-term weather resistance. Every installation is levelled correctly, securely bracketed and built to handle heavy rainfall.
 </p>
 
-<h2>Areas We Cover – All Within 10 Miles of Askern DN6</h2>
-<p>
-We cover <strong>every area within 10 miles of Askern</strong>, including: Askern, Norton, Campsall, Skellow, Carcroft, Bentley, Adwick-le-Street, Burghwallis, Owston, Moss, Fenwick, Sykehouse, Braithwaite, Thorpe-in-Balne, Arksey, Woodlands, Hickleton, Brodsworth, Goldthorpe, Thurnscoe, Sprotbrough and all surrounding rural communities.
-</p>
+<h2>Areas We Cover – All Within 10 Miles of Askern</h2>
 
 <p>
-If you're unsure whether you're covered — the answer is almost always yes.
+We proudly serve **every village, town, estate and rural area within 10 miles of Askern DN6**, including:
+Askern, Norton, Campsall, Skellow, Carcroft, Adwick-le-Street, Bentley, Arksey, Burghwallis, Owston, Moss, Fenwick, Sykehouse, Braithwaite, Thorpe-in-Balne, Woodlands, Hickleton, Hooton Pagnell, Brodsworth, Sprotbrough, Goldthorpe, Thurnscoe and all surrounding communities.
 </p>
 
-<h2>Why Home Repairs 4U?</h2>
+<p>
+If you're unsure whether we cover your location, the answer is almost always yes.
+</p>
+
+<h2>Why Choose Home Repairs 4U?</h2>
 
 <ul>
-<li>✔ Over 30 years real trade experience</li>
-<li>✔ Competitive prices and honest advice</li>
-<li>✔ Fully insured</li>
-<li>✔ Same-day or next-day availability</li>
-<li>✔ No call-out fees</li>
-<li>✔ Friendly, local, reliable</li>
-<li>✔ Clean and respectful workmanship</li>
+<li>✔ 30+ years of hands-on experience</li>
+<li>✔ Fully insured for your peace of mind</li>
+<li>✔ Local, reliable, friendly service</li>
+<li>✔ Clear, honest pricing — no call-out fees</li>
+<li>✔ Same-day or next-day availability where possible</li>
+<li>✔ High-quality UPVC replacements</li>
+<li>✔ Skilled, careful, respectful workmanship</li>
 </ul>
 
-<h2>Long-Form Detail (SEO-Optimised)</h2>
+<h2>Long-Form Service Overview (SEO Enhanced)</h2>
 <p>
-Gutters protect your home from water damage by carrying rainwater safely away from your roof and walls. When they become blocked or damaged, moisture begins to enter places it shouldn't — especially in older brick-built homes found throughout Askern and its surrounding villages. Overflowing gutters can cause damp patches, mould growth, peeling paint, timber rot and problems with internal walls and ceilings. Many homeowners only notice the issue once damage is visible indoors, but by then repairs can be costly.
+Water damage caused by poorly maintained guttering is one of the most common and expensive issues experienced by homeowners. When gutters overflow, water runs directly into brickwork, foundations and rooflines. Over time, this creates damp patches inside the home, encourages mould growth and weakens structures. Many customers contact us only once interior symptoms appear, but these can take months to develop. Early maintenance prevents all of this.
 </p>
 
 <p>
-Routine gutter maintenance is the simplest way to avoid this. Our approach focuses on prevention, early detection and long-lasting solutions. Every job includes a visual inspection, honest feedback and recommendations based solely on what you actually need — never unnecessary upsells. Homeowners across DN6 rely on our experience, integrity and commitment to doing the job right the first time.
+Our gutter services focus on prevention first. We clean, clear, inspect and report any signs of potential failure. If your gutters are starting to sag or pull away from fascia boards, we fix the issue before the damage spreads. If a replacement is needed, we install modern, reliable systems that significantly improve drainage and long-term performance.
 </p>
 
-<h2>Book Today</h2>
 <p>
-For fast, friendly and reliable gutter replacement, cleaning or clearing, call anytime. We respond quickly and cover all properties within 10 miles of Askern DN6.
+Properties across DN6 — from older stone cottages to modern homes — all benefit from a robust gutter system. With decades of experience working on a wide range of buildings, we understand exactly how to handle each type safely and effectively.
+</p>
+
+<h2>Book Your Gutter Service Today</h2>
+<p>
+For fast, friendly and professional gutter cleaning, clearing or replacement, contact us anytime. Whether you live in Askern or anywhere within 10 miles, we’re ready to help.
 </p>
 
 <div style="text-align:center;margin:35px 0;">
@@ -179,7 +240,7 @@ For fast, friendly and reliable gutter replacement, cleaning or clearing, call a
 </main>
 
 <footer>
-© Home Repairs 4U – Gutter Replacement, Cleaning & Clearing – Askern DN6 • Call 07735 873694
+© Home Repairs 4U | Gutter Replacement • Cleaning • Clearing | Askern DN6 | Call 07735 873694
 </footer>
 
 </body>
