--- a/services/guttering.html
+++ b/services/guttering.html
@@ -10,7 +10,7 @@
 
 
 <!-- Preload logo -->
-<link rel="preload" as="image" href="images/logo.webp">
+<link rel="preload" as="image" href="images/logo.webp" />
 
 <style>
 /* GENERAL PAGE STYLES */
