--- a/services/guttering.html
+++ b/services/guttering.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Gutter Replacement, Cleaning & Clearing | Askern DN6 | Home Repairs 4U</title>
 
 <link rel="canonical" href="https://steely1968.github.io/">
