--- a/services/guttering.html
+++ b/services/guttering.html
@@ -155,6 +155,7 @@ alt="Home Repairs 4U Logo"
 class="logo"
 width="600" height="200"
 style="max-height:90px;width:auto;">
+loading="eager">
 <br>
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </header>
