--- a/services/guttering.html
+++ b/services/guttering.html
@@ -151,10 +151,9 @@ font-size:14px;
 
 <header>
 <img src="images/logo.webp"
-alt="Home Repairs 4U Logo"
+alt="Home Repairs 4U – Handyman & Home Services in Askern DN6"
 class="logo"
 width="600" height="200"
-style="max-height:90px;width:auto;">
 loading="eager">
 <br>
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
